hdone/objects/Confirmation_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Confirmation Data</relationshipLabel>
        <relationshipName>Confirmation_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AddressIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Address__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;, 
(CASE(  Address__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Address__c ),
&quot;HealthDetail&quot;, Address__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Address__r.SourceOrg__c , &quot;HealthDetail&quot;,Address__r.ExternalId__c, 
&quot;Customer&quot;, Address__r.Remote_AddressId__c, &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer record Id or External Id</inlineHelpText>
        <label>AddressIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressTypeId_Formula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Address_Type__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;, 
(CASE(  Address_Type__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Address_Type__c ),
&quot;HealthDetail&quot;, Address_Type__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Address_Type__r.SourceOrg__c , &quot;HealthDetail&quot;,Address_Type__r.ExternalId__c, 
&quot;Customer&quot;, Address_Type__r.Remote_AddressType_Id__c, &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer record Id or External Id</inlineHelpText>
        <label>AddressTypeId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Address Type</label>
        <referenceTo>Address_Type__c</referenceTo>
        <relationshipLabel>Confirmation Data</relationshipLabel>
        <relationshipName>Confirmation_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Confirmation Data</relationshipLabel>
        <relationshipName>Confirmation_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuditReport__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>AuditReport where ConfirmationData was derived</description>
        <inlineHelpText>AuditReport related to ConfirmationData</inlineHelpText>
        <label>AuditReport</label>
        <referenceTo>AuditReport__c</referenceTo>
        <relationshipLabel>Confirmation Data</relationshipLabel>
        <relationshipName>Confirmation_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Days_Calc__c</fullName>
        <description># of business days from Date and Confirmation DateTime</description>
        <formula>(5 * ( FLOOR( (  Date__c  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Date__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( (  DATEVALUE(ConfirmationData_DateTime__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(ConfirmationData_DateTime__c) - DATE( 1900, 1, 8), 7 ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># of business days from Date and Confirmation DateTime</inlineHelpText>
        <label>Business Days Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Days_Calc__c</fullName>
        <description># of calendar days between Date and Confirmation DateTime</description>
        <formula>Date__c - Datevalue(ConfirmationData_DateTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># of calendar days between Date and Confirmation DateTime</inlineHelpText>
        <label>Calendar Days Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>General comments</description>
        <inlineHelpText>General comments</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmationData_DateTime__c</fullName>
        <description>Date and Time of Confirmation Data</description>
        <inlineHelpText>Date and Time of Confirmation Data</inlineHelpText>
        <label>ConfirmationData DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Confirmation_Status__c</fullName>
        <label>Confirmation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Confirmed Correct</fullName>
                </value>
                <value>
                    <fullName>Practicing</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Confirmed Incorrect</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Non-Working</fullName>
                </value>
                <value>
                    <fullName>New Patients Accepted</fullName>
                </value>
                <value>
                    <fullName>No New Patients</fullName>
                </value>
                <value>
                    <fullName>Voicemail</fullName>
                </value>
                <value>
                    <fullName>Record Found</fullName>
                </value>
                <value>
                    <fullName>Record Not Found</fullName>
                </value>
                <value>
                    <fullName>Likely Correct</fullName>
                </value>
                <value>
                    <fullName>Likely Incorrect</fullName>
                </value>
                <value>
                    <fullName>Data Update Required</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
                <value>
                    <fullName>Fax Machine</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Not Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Website__c</fullName>
        <label>Confirmation Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <label>Confirmation</label>
        <referenceTo>Confirmation__c</referenceTo>
        <relationshipLabel>Confirmation Data</relationshipLabel>
        <relationshipName>Confirmation_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Confirmation Data (Provider)</relationshipLabel>
        <relationshipName>Confirmation_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactId_Formula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Contact__c  )),
CASE(  SourceOrg__c  , &quot;Customer&quot;, 
(CASE(  Contact__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Contact__c  ),
&quot;HealthDetail&quot;, Contact__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Contact__r.SourceOrg__c , &quot;HealthDetail&quot;,Contact__r.ExternalId__c, 
&quot;Customer&quot;, Contact__r.Remote_Provider_Id__c, &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer record Id or External Id</inlineHelpText>
        <label>ContactId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>Contact name from Contact_frm</description>
        <inlineHelpText>From Contact_frm</inlineHelpText>
        <label>ContactName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Confirmation Data</relationshipLabel>
        <relationshipName>Confirmation_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_frm__c</fullName>
        <description>Contact name formula. Used for Duplicate Matching Rules</description>
        <formula>IF(NOT(ISBLANK( Identifier_Type__c )), 
Identifier_Type__r.Address_Type__r.ContactName_FieldAnalyst__c , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_frm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if confirmation data should be displayed for customer. In some cases displaying may seem redundant and in others not applicable for customer. Address is one example.</description>
        <inlineHelpText>Indicates if confirmation data should be displayed for customer.</inlineHelpText>
        <label>Customer Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Generic date field</description>
        <inlineHelpText>Generic date field</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ExternalId</description>
        <externalId>true</externalId>
        <inlineHelpText>ExternalId</inlineHelpText>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_File__c</fullName>
        <description>External file usually link to audio recording or other file</description>
        <inlineHelpText>External file usually link to audio recording or other file</inlineHelpText>
        <label>External File</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Flow_Status__c</fullName>
        <label>Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdentifierIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Identifier__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;, 
(CASE(  Identifier__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Identifier__c),
&quot;HealthDetail&quot;, Identifier__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Identifier__r.SourceOrg__c , &quot;HealthDetail&quot;,Identifier__r.ExternalId__c, 
&quot;Customer&quot;, Identifier__r.Remote_Identifier_Id__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer record Id or External Id</inlineHelpText>
        <label>IdentifierIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentifierTypeIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Identifier_Type__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;, 
(CASE(  Identifier_Type__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Identifier_Type__c),
&quot;HealthDetail&quot;, Identifier_Type__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Identifier_Type__r.SourceOrg__c , &quot;HealthDetail&quot;,Identifier_Type__r.ExternalId__c, 
&quot;Customer&quot;, Identifier_Type__r.Remote_IdentifierTypeId__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer record Id or External Id</inlineHelpText>
        <label>IdentifierTypeIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Identifier Type</label>
        <referenceTo>Identifier_Type__c</referenceTo>
        <relationshipLabel>Confirmation Data</relationshipLabel>
        <relationshipName>Confirmation_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Identifier</label>
        <referenceTo>Identifier__c</referenceTo>
        <relationshipLabel>Confirmation Data</relationshipLabel>
        <relationshipName>Confirmation_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>How confirmation data was obtained</description>
        <inlineHelpText>Method for how confirmation data was obtained</inlineHelpText>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Software Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>Address and Phone</fullName>
                </value>
                <value>
                    <fullName>Provider and Address</fullName>
                </value>
                <value>
                    <fullName>Appointment Availability</fullName>
                </value>
                <value>
                    <fullName>Provider and Address and Plan</fullName>
                </value>
                <value>
                    <fullName>Provider and Address and Specialty</fullName>
                </value>
                <value>
                    <fullName>Provider and Address and Website</fullName>
                </value>
                <value>
                    <fullName>Provider and Address and Phone</fullName>
                </value>
                <value>
                    <fullName>New Patients Accepted</fullName>
                </value>
                <value>
                    <fullName>Directory Check Online</fullName>
                </value>
                <value>
                    <fullName>Directory Check Print</fullName>
                </value>
                <value>
                    <fullName>Comments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PNRCStatusCheck__c</fullName>
        <description>Last date and time the PartnerNetworkRecordConnection status was updated</description>
        <inlineHelpText>Last date and time the PartnerNetworkRecordConnection status was updated</inlineHelpText>
        <label>PNRCStatusCheck</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ParentRecordType__c</fullName>
        <description>RecordType.DeveloperName of parent record. Used to ensure correct records are shared or not shared with customer. Not using validation rules since can prevent record from being saved</description>
        <formula>Confirmation__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>RecordType.DeveloperName of parent record</inlineHelpText>
        <label>ParentRecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentShareStatus__c</fullName>
        <description>Indicates sharing status of Parent record. Sf2Sf will error if attempt to share child record and parent is not actively shared</description>
        <formula>CASE(Confirmation__r.Sf2Sf_ShareStatus__c, &quot;Active&quot;, &quot;Active&quot;,
&quot;Sent&quot;, &quot;Active&quot;,
&quot;Deleted&quot;, &quot;Inactive&quot;,
&quot;Inactive&quot;, &quot;Inactive&quot;,
&quot;Invite&quot;, &quot;Invite&quot;,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates sharing status of Parent record.</inlineHelpText>
        <label>ParentShareStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Builder_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unfortunate field used to indicate if Process Builder ran to avoid recursive updates.</description>
        <label>Process Builder Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <description>Product name which will be same as Confirmation</description>
        <formula>TEXT(Confirmation__r.Product_Name__c)

/* Ensures Product Name same as Confirmation. Product Name is needed for Flows */</formula>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>ProductName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_AddressType_Id__c</fullName>
        <description>Remote AddressType Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote AddressType Id</inlineHelpText>
        <label>Remote AddressType_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Address_Id__c</fullName>
        <description>Remote Address Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote Address Id</inlineHelpText>
        <label>Remote Address_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Contact_Id__c</fullName>
        <description>Remote Contact Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote Contact Id</inlineHelpText>
        <label>Remote Contact_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_IdentifierType_Id__c</fullName>
        <description>Remote IdentifierType Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote IdentifierType Id</inlineHelpText>
        <label>Remote IdentifierType_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Identifier_Id__c</fullName>
        <description>Remote Identifier Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Remote Identifier Id</inlineHelpText>
        <label>Remote Identifier_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_SpecialtyId__c</fullName>
        <description>Remote SpecialtyId for Salesforce to Salesforce</description>
        <inlineHelpText>Remote SpecialtyId for Salesforce to Salesforce</inlineHelpText>
        <label>Remote SpecialtyId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>Associated response. Usually from AuditReport.</description>
        <inlineHelpText>Associated response. Usually from AuditReport.</inlineHelpText>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_PartnerConnection_Formula__c</fullName>
        <description>PartnerNetworkConnection Id from Confirmation</description>
        <formula>IF(NOT(ISBLANK(Confirmation__r.Sf2Sf_PartnerConnection_Id__c )),
Confirmation__r.Sf2Sf_PartnerConnection_Id__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PartnerNetworkConnection Id</inlineHelpText>
        <label>Sf2Sf_PartnerConnection_Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareId__c</fullName>
        <description>Id from PartnerNetworkRecordConnection for shared record.</description>
        <inlineHelpText>Id from PartnerNetworkRecordConnection for shared record.</inlineHelpText>
        <label>Sf2Sf ShareId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareStatus__c</fullName>
        <description>Populates shared status for Salesforce to Salesforce connection. Cannot read status from object only from PartnerNetworkConnection object</description>
        <inlineHelpText>Shared status for Salesforce to Salesforce connection. Not real time.</inlineHelpText>
        <label>Sf2Sf_ShareStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if record should be shared with other organization. Used for Salesforce to Salesforce.</description>
        <inlineHelpText>Should record be shared?</inlineHelpText>
        <label>Share Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpecialtyIdFormula__c</fullName>
        <description>Displays customer record ID or External Id if record is shared from Master org. Does logic to determine if need to use Source or Target Ids for formula. Needed to correctly update record after SF2SF sharing.</description>
        <formula>IF(NOT(ISBLANK(Specialty__c)),
CASE(  SourceOrg__c  , &quot;Customer&quot;, 
(CASE(  Specialty__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Specialty__c),
&quot;HealthDetail&quot;, Specialty__r.ExternalId__c, &quot;Error&quot;)) ,
&quot;HealthDetail&quot;,
(CASE( Specialty__r.SourceOrg__c , &quot;HealthDetail&quot;,Specialty__r.ExternalId__c, 
&quot;Customer&quot;, Specialty__r.Remote_SpecialtyId__c , &quot;Error&quot;)) ,&quot;Error&quot;),
NULL)


/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer record Id or External Id</inlineHelpText>
        <label>SpecialtyIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Specialty</label>
        <referenceTo>Specialty__c</referenceTo>
        <relationshipLabel>Confirmation Data</relationshipLabel>
        <relationshipName>Confirmation_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Storage_addressid__c</fullName>
        <description>AddressId from storage object. Original customer addresses moved off platform to storage such as Big Object. Used to map back for reporting</description>
        <inlineHelpText>AddressId from storage object</inlineHelpText>
        <label>Storage_addressid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Partial__c</fullName>
        <description>From Street_Partial_frm. Used for Duplicate Matching Rules</description>
        <inlineHelpText>From Street_Partial_frm</inlineHelpText>
        <label>Street_Partial</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Partial_frm__c</fullName>
        <description>Calculates what the street address should be for record by finding 1st space. Adds fake street number at start to trigger matches for duplicate matching. Essentially we want to find Contacts at same street even when numbers do not match.</description>
        <formula>IF(NOT(ISBLANK( Identifier_Type__c )), 
&quot;999 &quot;&amp;MID(Identifier_Type__r.Address_Type__r.Address__r.AddressRelated_External__r.AddressLine1__c,FIND(&quot; &quot;, Identifier_Type__r.Address_Type__r.Address__r.AddressRelated_External__r.AddressLine1__c ),(LEN(Identifier_Type__r.Address_Type__r.Address__r.AddressRelated_External__r.AddressLine1__c)- 
FIND(&quot; &quot;, Identifier_Type__r.Address_Type__r.Address__r.AddressRelated_External__r.AddressLine1__c )+1)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Street address on Identifier Type</inlineHelpText>
        <label>Street_Partial_frm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>From Zip_frm</description>
        <inlineHelpText>From Zip_frm</inlineHelpText>
        <label>Zip</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_frm__c</fullName>
        <description>Zip code from Address. Used for duplicate matching</description>
        <formula>IF(NOT(ISBLANK( Identifier_Type__c )), 
Identifier_Type__r.Address_Type__r.Address__r.AddressRelated_External__r.ZipCode__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zip Code from IdentifierType__r....Address</inlineHelpText>
        <label>Zip_frm</label>
        <type>Text</type>
    </fields>
    <label>Confirmation Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Confirmation__c</columns>
        <columns>Confirmation_Status__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CDN-{000000}</displayFormat>
        <label>Confirmation Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Confirmation Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>